--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<title>DerNait's Card Game</title>
+	<title>Halo: Memoria</title>
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
 	<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
@@ -177,7 +177,7 @@
 			margin: 0 0 1rem;
 			font-family: "Orbitron", sans-serif;
 			font-size: 2rem;
-			color: var(--primary);
+			color: white;
 			text-shadow: 0 0 6px rgba(84,216,255,.7);
 		}
 		.orbitron-text {
@@ -216,13 +216,29 @@
 	<script type="text/babel">
 		const { useState, useEffect } = React;
 
-		function Header({ moves }) {
+		function Header({ moves, memorizing }) {
 			return (
 				<div className="header">
 					<h1 className="m-0">Halo: Memoria</h1>
-					<p>Movimientos: {moves}</p>
+					{memorizing && <p>Memoriza las cartas...</p>}
+					{!memorizing && <p>Movimientos: {moves}</p>}
 				</div>
 			);	
+		}
+
+		function StartBanner({ onStart }){
+			return(
+				<div className="victory-overlay">
+					<div className="victory-card">
+						<h2>Halo: Memoria</h2>
+						<div className="text-light orbitron-text">
+							<p>1. Memoriza en 3 segundos</p>
+							<p>2. Encuentra y empareja</p>
+						</div>
+						<button className="play-btn" onClick={onStart}>Comenzar</button>
+					</div>
+				</div>
+			);
 		}
 
 		function Table({ children }) {
@@ -295,10 +311,16 @@
 			const [moves, setMoves]		= useState(0);
 			const [busy, setBusy]		= useState(false);
 			const [showAll, setShowAll] = useState(true);
+			const [ready,setReady]		= useState(false);
+			const [memorizing, setMemorizing] = useState(false);
 
 			useEffect(() => {
-				startGame();
-			}, []);
+				if (ready) {
+					startGame();
+				} 
+			}, [ready]);
+
+			const handleStart = () => setReady(true);
 
 			const cardClick = id => {
 				if (busy || cardsFlipped.includes(id) || cardsMatched.includes(id) || showAll) {
@@ -325,7 +347,11 @@
 			const startGame = () => {
 				const deck = [...uniqueVals, ...uniqueVals].sort(() => Math.random()-0.5);
 				setCards(deck);
-				setTimeout(() => setShowAll(false), 2000);
+				setMemorizing(true);
+				setTimeout(() => {
+					setShowAll(false)
+					setMemorizing(false);
+				}, 3000);
 			}
 
 			const resetTurn = () => {
@@ -341,27 +367,35 @@
 				startGame();
 			};
 
-			const won = cardsMatched.length === cards.length;
+			const won = ready && cardsMatched.length === cards.length;
 
 			return (
 				<div>
-					<Header moves={moves}/>
-					<Table>
-						<div className="w-100 text-center">
-							{won && <VictoryBanner moves={moves} onPlayAgain={resetGame}/>}
-							<Grid rows={rows} cols={cols}>
-								{cards.map((value,index)=>
-									<Card
-										key={index}
-										value={value}
-										isFlipped={showAll||cardsFlipped.includes(index)}
-										isMatched={cardsMatched.includes(index)}
-										onClick={()=>cardClick(index)}
-									/>
-								)}
-							</Grid>
-						</div>
-					</Table>
+					{!ready && <StartBanner onStart={handleStart}/>}
+
+					{
+						ready && (
+							<div>
+								<Header moves={moves} memorizing={memorizing}/>
+								<Table>
+									<div className="w-100 text-center">
+										{won && <VictoryBanner moves={moves} onPlayAgain={resetGame}/>}
+										<Grid rows={rows} cols={cols}>
+											{cards.map((value,index)=>
+												<Card
+													key={index}
+													value={value}
+													isFlipped={showAll||cardsFlipped.includes(index)}
+													isMatched={cardsMatched.includes(index)}
+													onClick={()=>cardClick(index)}
+												/>
+											)}
+										</Grid>
+									</div>
+								</Table>
+							</div>
+						)
+					}
 				</div>
 			);
 		}
