--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 							<p>1. Encuentra</p>
 							<p>2. Memoriza</p>
 							<p>3. Empareja</p>
-							<p className="repo-link"><strong>Repositorio: </strong><a href="https://github.com/DerNait/web-lab6">aquí</a></p>
+							<p className="repo-link"><strong>Repositorio: </strong><a href="https://github.com/DerNait/web-lab6" target="_blank">aquí</a></p>
 						</div>
 						<button className="mt-3 play-btn" onClick={onStart}>Comenzar</button>
 					</div>
